Prepare update ot Java 19