@@ -4,7 +4,7 @@ plugins {
 
 val mavenizedProjects: List<Project> by rootProject.extra
 
-listOf(9, 17).forEach { javaVersion ->
+listOf(9, 17, 19).forEach { javaVersion ->
 	val sourceSet = sourceSets.register("mainRelease${javaVersion}") {
 		compileClasspath += sourceSets.main.get().output
 		runtimeClasspath += sourceSets.main.get().output
@@ -25,6 +25,7 @@ listOf(9, 17).forEach { javaVersion ->
 
 		named<JavaCompile>(sourceSet.get().compileJavaTaskName).configure {
 			options.release.set(javaVersion)
+			if (javaVersion == 19) options.compilerArgs.add("--enable-preview")
 		}
 
 		named<Checkstyle>("checkstyle${sourceSet.name.replaceFirstChar(Char::titlecase)}").configure {
@@ -34,6 +35,11 @@ listOf(9, 17).forEach { javaVersion ->
 		if (project in mavenizedProjects) {
 			javadoc {
 				source(sourceSet.get().allJava)
+                val javadocOptions = options as CoreJavadocOptions
+                if (javaVersion == 19) {
+                    javadocOptions.addStringOption("-release", "19")
+                    javadocOptions.addBooleanOption("-enable-preview", true)
+                }
 			}
 			named<Jar>("sourcesJar").configure {
 				from(sourceSet.get().allSource)
